# oxiclaw

./: Cargo.toml  IDENTITY.md  README.md  SESSION_SUMMARY_2026-02-25.md  SOUL.md  USER.md
basedir/memory/tantivy/: meta.json
scripts/: smoke_memory_search.sh
src/: config.rs  cron_store.rs  curator.rs  engine.rs  http.rs  main.rs  memory.rs  persona.rs  runtime.rs  session.rs  storage.rs  telegram.rs
src/llm/: mod.rs  openai_compat.rs
src/tools/: mod.rs
subprojects/indexer/: README.md
